src/assets/data/yaml-template/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: new-namespace
  labels:
     app.kubernetes.io/name: new-namespace
