src/assets/data/yaml-template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: new-svc
  labels:
    app: new-svc
spec:
  ports:
  - port: 8080
    name: http
  clusterIP: None
  selector:
    app: new-res
