src/assets/data/yaml-template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-ingress
spec:
  rules:
   - http:
      paths:
      - path: /home
        pathType: Prefix
        backend:
          service:
            name: new-svc
            port:
              number: 8080
